adding MI between two SNPs

--- a/screening_MODULE.ipynb
+++ b/screening_MODULE.ipynb
@@ -12,10 +12,17 @@
    },
    "outputs": [],
    "source": [
+    "import multiprocess as _mp\n",
+    "from sklearn.preprocessing import RobustScaler as _scaler\n",
+    "from dask import dataframe as _dd\n",
+    "import pandas as _pd\n",
+    "from KDEpy import FFTKDE as _FFTKDE\n",
+    "from bed_reader import open_bed as _open_bed\n",
+    "from numba import jit as _jit\n",
+    "import numpy as _np\n",
     "import warnings as _warnings\n",
     "\n",
     "_warnings.filterwarnings('ignore')\n",
-    "import numpy as _np\n",
     "#from bgen_reader import open_bgen\n",
     "#from os.path import join\n",
     "#from pandas_plink import read_plink1_bin\n",
@@ -27,18 +34,11 @@
     "# import os\n",
     "# from pysnptools.distreader import Bgen, DistMemMap\n",
     "# from pathlib import Path\n",
-    "from numba import jit as _jit\n",
-    "from bed_reader import open_bed as _open_bed\n",
     "# from pysnptools.snpreader import SnpData, SnpMemMap\n",
     "# from pysnptools.util import log_in_place\n",
     "# import matplotlib.pyplot as plt\n",
     "# from scipy.stats import gaussian_kde\n",
-    "from KDEpy import FFTKDE as _FFTKDE\n",
-    "import pandas as _pd\n",
-    "from dask import dataframe as _dd\n",
-    "from sklearn.preprocessing import RobustScaler as _scaler\n",
-    "# from pybgen import PyBGEN\n",
-    "import multiprocess as _mp"
+    "# from pybgen import PyBGEN"
    ]
   },
   {
@@ -62,7 +62,7 @@
    "outputs": [],
    "source": [
     "# @_jit(forceobj=True, nogil=True, cache=True, parallel=True, fastmath=True)\n",
-    "def MI_continuous_SNP(a,\n",
+    "def MI_continuous_012(a,\n",
     "                      b,\n",
     "                      N=500,\n",
     "                      kernel=\"epa\",\n",
@@ -141,7 +141,7 @@
     "\n",
     "\n",
     "@_jit(nopython=True, nogil=True, cache=True, parallel=True, fastmath=True)\n",
-    "def MI_binary_SNP(a, b, machine_err=1e-12):\n",
+    "def MI_binary_012(a, b, machine_err=1e-12):\n",
     "    \"\"\"\n",
     "    calculate mutual information between binary outcome and an SNP variable of 0,1,2\n",
     "    assume no missing data\n",
@@ -153,9 +153,9 @@
     "    b_marginal = _np.array([p0, p1, p2])\n",
     "    # estimate pmf of the binary outcome\n",
     "    a_p0 = _np.sum(a == 0) / len(a)\n",
-    "    a_p1 = _np.sum(a == 1) / len(a)\n",
+    "    a_p1 = 1. - a_p0\n",
     "    a_marginal = _np.array([a_p0, a_p1]).reshape(-1, 1)\n",
-    "    # estimate the cond density\n",
+    "    # estimate the cond pmf\n",
     "    joint = _np.zeros((2, 3))\n",
     "    _b0 = (b == 0)\n",
     "    joint[0, 0] = _np.sum(a[_b0] == 0) / len(a)\n",
@@ -181,16 +181,62 @@
     "    return mi_temp\n",
     "\n",
     "\n",
+    "@_jit(nopython=True, nogil=True, cache=True, parallel=True, fastmath=True)\n",
+    "def MI_012_012(a, b, machine_err=1e-12):\n",
+    "    \"\"\"\n",
+    "    calculate mutual information between two SNPs\n",
+    "    assume no missing data\n",
+    "    could be very useful for a MI-based clumping\n",
+    "    \"\"\"\n",
+    "    # first estimate the pmf of SNP\n",
+    "    p0 = _np.sum(b == 0) / len(b)\n",
+    "    p1 = _np.sum(b == 1) / len(b)\n",
+    "    p2 = 1. - p0 - p1\n",
+    "    b_marginal = _np.array([p0, p1, p2])\n",
+    "    # estimate pmf of the binary outcome\n",
+    "    a_p0 = _np.sum(a == 0) / len(a)\n",
+    "    a_p1 = _np.sum(a == 1) / len(a)\n",
+    "    a_p2 = 1. - a_p0 - a_p1\n",
+    "    a_marginal = _np.array([a_p0, a_p1, a_p2]).reshape(-1, 1)\n",
+    "    # estimate the cond pmf\n",
+    "    joint = _np.zeros((3, 3))\n",
+    "    _b0 = (b == 0)\n",
+    "    joint[0, 0] = _np.sum(a[_b0] == 0) / len(a)\n",
+    "    joint[1, 0] = _np.sum(a[_b0] == 1) / len(a)\n",
+    "    joint[2, 0] = _np.sum(a[_b0] == 2) / len(a)\n",
+    "    _b1 = (b == 1)\n",
+    "    joint[0, 1] = _np.sum(a[_b1] == 0) / len(a)\n",
+    "    joint[1, 1] = _np.sum(a[_b1] == 1) / len(a)\n",
+    "    joint[2, 1] = _np.sum(a[_b1] == 2) / len(a)\n",
+    "    _b2 = (b == 2)\n",
+    "    joint[0, 2] = _np.sum(a[_b2] == 0) / len(a)\n",
+    "    joint[1, 2] = _np.sum(a[_b2] == 1) / len(a)\n",
+    "    joint[2, 2] = _np.sum(a[_b2] == 2) / len(a)\n",
+    "\n",
+    "    _temp = a_marginal * b_marginal\n",
+    "    _temp = joint / _temp\n",
+    "    _temp = joint * _np.log(_temp)\n",
+    "    _temp = _nan_to_0(_temp)  # for possible nuemrical issues\n",
+    "\n",
+    "    mi_temp = _np.sum(_temp)\n",
+    "\n",
+    "    # this is to ensure that estimated MI is positive, to solve an numerical issue\n",
+    "    if mi_temp < machine_err:\n",
+    "        mi_temp = machine_err\n",
+    "\n",
+    "    return mi_temp\n",
+    "\n",
+    "\n",
     "# make this function available\n",
     "# @_jit(forceobj=True, nogil=True, cache=True, parallel=True, fastmath=True)\n",
-    "def MI_bivariate_continuous(a,\n",
-    "                            b,\n",
-    "                            a_N=300,\n",
-    "                            b_N=300,\n",
-    "                            kernel=\"epa\",\n",
-    "                            bw=\"silverman\",\n",
-    "                            norm=2,\n",
-    "                            machine_err=1e-12):\n",
+    "def MI_continuous_continuous(a,\n",
+    "                             b,\n",
+    "                             a_N=300,\n",
+    "                             b_N=300,\n",
+    "                             kernel=\"epa\",\n",
+    "                             bw=\"silverman\",\n",
+    "                             norm=2,\n",
+    "                             machine_err=1e-12):\n",
     "    \"\"\"\n",
     "    (Single Core version) calculate mutual information on bivariate continuous r.v..\n",
     "    \"\"\"\n",
@@ -233,7 +279,7 @@
     "                         kernel=\"epa\",\n",
     "                         bw=\"silverman\",\n",
     "                         machine_err=1e-12):\n",
-    "    return MI_continuous_SNP(a=b,\n",
+    "    return MI_continuous_012(a=b,\n",
     "                             b=a,\n",
     "                             N=N,\n",
     "                             kernel=kernel,\n",
@@ -297,7 +343,7 @@
     "    #         _SNP = _SNP[gene_ind]  # get gene iid also in outcome iid\n",
     "    #         _outcome = outcome[_SNP != -127]  # remove missing SNP in outcome\n",
     "    #         _SNP = _SNP[_SNP != -127]  # remove missing SNP\n",
-    "    #         MI_UKBB[j] = MI_continuous_SNP(a=_outcome,\n",
+    "    #         MI_UKBB[j] = MI_continuous_012(a=_outcome,\n",
     "    #                                        b=_SNP,\n",
     "    #                                        N=N,\n",
     "    #                                        kernel=kernel,\n",
@@ -309,7 +355,7 @@
     "        _SNP = _SNP[gene_ind]  # get gene iid also in outcome iid\n",
     "        _outcome = outcome[_SNP != -127]  # remove missing SNP in outcome\n",
     "        _SNP = _SNP[_SNP != -127]  # remove missing SNP\n",
-    "        return MI_continuous_SNP(a=_outcome,\n",
+    "        return MI_continuous_012(a=_outcome,\n",
     "                                 b=_SNP,\n",
     "                                 N=N,\n",
     "                                 kernel=kernel,\n",
@@ -351,14 +397,14 @@
     "    #         _SNP = _SNP[gene_ind]  # get gene iid also in outcome iid\n",
     "    #         _outcome = outcome[_SNP != -127]  # remove missing SNP in outcome\n",
     "    #         _SNP = _SNP[_SNP != -127]  # remove missing SNP\n",
-    "    #         MI_UKBB[j] = MI_binary_SNP(a=_outcome, b=_SNP, machine_err=machine_err)\n",
+    "    #         MI_UKBB[j] = MI_binary_012(a=_outcome, b=_SNP, machine_err=machine_err)\n",
     "\n",
     "    def _map_foo(j):\n",
     "        _SNP = bed1.read(_np.s_[:, j], dtype=_np.int8).flatten()\n",
     "        _SNP = _SNP[gene_ind]  # get gene iid also in outcome iid\n",
     "        _outcome = outcome[_SNP != -127]  # remove missing SNP in outcome\n",
     "        _SNP = _SNP[_SNP != -127]  # remove missing SNP\n",
-    "        return MI_binary_SNP(a=_outcome, b=_SNP, machine_err=machine_err)\n",
+    "        return MI_binary_012(a=_outcome, b=_SNP, machine_err=machine_err)\n",
     "\n",
     "    MI_UKBB = _np.array(list(map(_map_foo, range(len(bed1_sid)))))\n",
     "    return MI_UKBB\n",
@@ -412,7 +458,7 @@
     "        #             _SNP = _SNP[gene_ind]  # get gene iid also in outcome iid\n",
     "        #             _outcome = outcome[_SNP != -127]  # remove missing SNP in outcome\n",
     "        #             _SNP = _SNP[_SNP != -127]  # remove missing SNP\n",
-    "        #             _MI_slice[k] = MI_continuous_SNP(a=_outcome,\n",
+    "        #             _MI_slice[k] = MI_continuous_012(a=_outcome,\n",
     "        #                                              b=_SNP,\n",
     "        #                                              N=N,\n",
     "        #                                              kernel=kernel,\n",
@@ -424,7 +470,7 @@
     "            _SNP = _SNP[gene_ind]  # get gene iid also in outcome iid\n",
     "            _outcome = outcome[_SNP != -127]  # remove missing SNP in outcome\n",
     "            _SNP = _SNP[_SNP != -127]  # remove missing SNP\n",
-    "            return MI_continuous_SNP(a=_outcome,\n",
+    "            return MI_continuous_012(a=_outcome,\n",
     "                                     b=_SNP,\n",
     "                                     N=N,\n",
     "                                     kernel=kernel,\n",
@@ -488,7 +534,7 @@
     "        #             _SNP = _SNP[gene_ind]  # get gene iid also in outcome iid\n",
     "        #             _outcome = outcome[_SNP != -127]  # remove missing SNP in outcome\n",
     "        #             _SNP = _SNP[_SNP != -127]  # remove missing SNP\n",
-    "        #             _MI_slice[k] = MI_binary_SNP(a=_outcome,\n",
+    "        #             _MI_slice[k] = MI_binary_012(a=_outcome,\n",
     "        #                                          b=_SNP,\n",
     "        #                                          machine_err=machine_err)\n",
     "        #             k += 1\n",
@@ -497,7 +543,7 @@
     "            _SNP = _SNP[gene_ind]  # get gene iid also in outcome iid\n",
     "            _outcome = outcome[_SNP != -127]  # remove missing SNP in outcome\n",
     "            _SNP = _SNP[_SNP != -127]  # remove missing SNP\n",
-    "            return MI_binary_SNP(a=_outcome, b=_SNP, machine_err=machine_err)\n",
+    "            return MI_binary_012(a=_outcome, b=_SNP, machine_err=machine_err)\n",
     "\n",
     "        _MI_slice = _np.array(list(map(_map_foo, _slice)))\n",
     "        return _MI_slice\n",
@@ -678,7 +724,7 @@
     "    #             _usecols[0], _usecols[j + 1]\n",
     "    #         ]  # here using _usecol[j + 1] because the left first column is the outcome\n",
     "    #         _a, _b = _read_two_columns(_csv=_csv, __=__, csv_engine=csv_engine)\n",
-    "    #         MI_csv[j] = MI_bivariate_continuous(a=_a,\n",
+    "    #         MI_csv[j] = MI_continuous_continuous(a=_a,\n",
     "    #                                             b=_b,\n",
     "    #                                             a_N=a_N,\n",
     "    #                                             b_N=b_N,\n",
@@ -691,14 +737,14 @@
     "            _usecols[0], _usecols[j + 1]\n",
     "        ]  # here using _usecol[j + 1] because the left first column is the outcome\n",
     "        _a, _b = _read_two_columns(_csv=_csv, __=__, csv_engine=csv_engine)\n",
-    "        return MI_bivariate_continuous(a=_a,\n",
-    "                                       b=_b,\n",
-    "                                       a_N=a_N,\n",
-    "                                       b_N=b_N,\n",
-    "                                       kernel=kernel,\n",
-    "                                       bw=bw,\n",
-    "                                       norm=norm,\n",
-    "                                       machine_err=machine_err)\n",
+    "        return MI_continuous_continuous(a=_a,\n",
+    "                                        b=_b,\n",
+    "                                        a_N=a_N,\n",
+    "                                        b_N=b_N,\n",
+    "                                        kernel=kernel,\n",
+    "                                        bw=bw,\n",
+    "                                        norm=norm,\n",
+    "                                        machine_err=machine_err)\n",
     "\n",
     "    MI_csv = _np.array(list(map(_map_foo, _np.arange(len(_usecols) - 1))))\n",
     "    return MI_csv\n",
@@ -829,7 +875,7 @@
     "        #                 _usecols[0], _usecols[j]\n",
     "        #             ]  # here using _usecol[j] because only input variables indices were splitted\n",
     "        #             _a, _b = _read_two_columns(_csv=_csv, __=__, csv_engine=csv_engine)\n",
-    "        #             _MI_slice[k] = MI_bivariate_continuous(a=_a,\n",
+    "        #             _MI_slice[k] = MI_continuous_continuous(a=_a,\n",
     "        #                                                    b=_b,\n",
     "        #                                                    a_N=a_N,\n",
     "        #                                                    b_N=b_N,\n",
@@ -843,14 +889,14 @@
     "                _usecols[0], _usecols[j]\n",
     "            ]  # here using _usecol[j] because only input variables indices were splitted\n",
     "            _a, _b = _read_two_columns(_csv=_csv, __=__, csv_engine=csv_engine)\n",
-    "            return MI_bivariate_continuous(a=_a,\n",
-    "                                           b=_b,\n",
-    "                                           a_N=a_N,\n",
-    "                                           b_N=b_N,\n",
-    "                                           kernel=kernel,\n",
-    "                                           bw=bw,\n",
-    "                                           norm=norm,\n",
-    "                                           machine_err=machine_err)\n",
+    "            return MI_continuous_continuous(a=_a,\n",
+    "                                            b=_b,\n",
+    "                                            a_N=a_N,\n",
+    "                                            b_N=b_N,\n",
+    "                                            kernel=kernel,\n",
+    "                                            bw=bw,\n",
+    "                                            norm=norm,\n",
+    "                                            machine_err=machine_err)\n",
     "\n",
     "        _MI_slice = _np.array(list(map(_map_foo, _slice)))\n",
     "        return _MI_slice\n",
