update the module

--- a/screening_MODULE.ipynb
+++ b/screening_MODULE.ipynb
@@ -6,8 +6,8 @@
    "id": "f1cc105c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-29T02:15:08.341892Z",
-     "start_time": "2023-01-29T02:15:07.392197Z"
+     "end_time": "2023-01-30T03:36:17.450362Z",
+     "start_time": "2023-01-30T03:36:16.593105Z"
     }
    },
    "outputs": [],
@@ -55,8 +55,8 @@
    "id": "1741add3",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-29T02:15:08.373018Z",
-     "start_time": "2023-01-29T02:15:08.343059Z"
+     "end_time": "2023-01-30T03:36:17.485256Z",
+     "start_time": "2023-01-30T03:36:17.451790Z"
     }
    },
    "outputs": [],
@@ -301,8 +301,8 @@
    "id": "8ce8b66d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-29T02:15:08.387498Z",
-     "start_time": "2023-01-29T02:15:08.374436Z"
+     "end_time": "2023-01-30T03:36:17.501391Z",
+     "start_time": "2023-01-30T03:36:17.487662Z"
     }
    },
    "outputs": [],
@@ -571,8 +571,8 @@
    "id": "51fcb92a",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-29T02:15:08.408589Z",
-     "start_time": "2023-01-29T02:15:08.388677Z"
+     "end_time": "2023-01-30T03:36:17.521632Z",
+     "start_time": "2023-01-30T03:36:17.502825Z"
     }
    },
    "outputs": [],
@@ -989,8 +989,8 @@
    "id": "8a032b1b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-29T02:15:23.214674Z",
-     "start_time": "2023-01-29T02:15:08.409559Z"
+     "end_time": "2023-01-30T03:36:32.197848Z",
+     "start_time": "2023-01-30T03:36:17.522882Z"
     }
    },
    "outputs": [
@@ -998,8 +998,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "two independant generalized Bern. r.v. realisations has MI estimate of  0.0007800439285222927\n",
-      "two independant generalized Gaussian r.v. realisations has MI estimate of  0.0020795638706983385\n",
+      "two independant generalized Bern. r.v. realisations has MI estimate of  1e-12\n",
+      "two independant generalized Bern. r.v. realisations has MI estimate of  0.0010023395689790935\n",
+      "two independant generalized Gaussian r.v. realisations has MI estimate of  0.0014784522662662921\n",
       "MI estimate between a,a and a,b:  0.11484453582991859 0.0018942218780961517\n"
      ]
     }
@@ -1011,22 +1012,25 @@
     "b = np.random.binomial(2, .3, 2000)\n",
     "print(\n",
     "    \"two independant generalized Bern. r.v. realisations has MI estimate of \",\n",
-    "    MI_binary_SNP(a, b))\n",
+    "    MI_binary_012(a, b))\n",
+    "print(\n",
+    "    \"two independant generalized Bern. r.v. realisations has MI estimate of \",\n",
+    "    MI_012_012(a, b))\n",
     "\n",
     "a = np.random.normal(size=2000)\n",
     "b = np.random.normal(size=2000)\n",
     "\n",
     "print(\n",
     "    \"two independant generalized Gaussian r.v. realisations has MI estimate of \",\n",
-    "    MI_bivariate_continuous(a, b))\n",
+    "    MI_continuous_continuous(a, b))\n",
     "a_MI = np.zeros(500)\n",
     "b_MI = np.zeros(500)\n",
     "for i in np.arange(500):\n",
     "    np.random.seed(i)\n",
     "    a = np.random.normal(size=2000)\n",
     "    b = np.random.normal(size=2000)\n",
-    "    a_MI[i] = MI_bivariate_continuous(a, a)\n",
-    "    b_MI[i] = MI_bivariate_continuous(a, b)\n",
+    "    a_MI[i] = MI_continuous_continuous(a, a)\n",
+    "    b_MI[i] = MI_continuous_continuous(a, b)\n",
     "print(\"MI estimate between a,a and a,b: \", np.mean(a_MI), np.mean(b_MI))"
    ]
   },
@@ -1036,8 +1040,8 @@
    "id": "6b189ee8",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-29T02:15:29.008790Z",
-     "start_time": "2023-01-29T02:15:23.216101Z"
+     "end_time": "2023-01-30T03:36:38.042526Z",
+     "start_time": "2023-01-30T03:36:32.199291Z"
     }
    },
    "outputs": [
@@ -1094,8 +1098,8 @@
    "id": "fb2875be",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-29T02:15:34.439850Z",
-     "start_time": "2023-01-29T02:15:29.009865Z"
+     "end_time": "2023-01-30T03:36:43.427361Z",
+     "start_time": "2023-01-30T03:36:38.043727Z"
     }
    },
    "outputs": [
@@ -1150,8 +1154,8 @@
    "id": "0764c527",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-29T02:15:34.443621Z",
-     "start_time": "2023-01-29T02:15:34.441182Z"
+     "end_time": "2023-01-30T03:36:43.432310Z",
+     "start_time": "2023-01-30T03:36:43.429154Z"
     }
    },
    "outputs": [],
@@ -1226,8 +1230,8 @@
    "id": "6fbd58c1",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-29T02:15:34.465468Z",
-     "start_time": "2023-01-29T02:15:34.445884Z"
+     "end_time": "2023-01-30T03:36:43.442727Z",
+     "start_time": "2023-01-30T03:36:43.433571Z"
     }
    },
    "outputs": [],
@@ -1246,8 +1250,8 @@
    "id": "177a3dfc",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-29T02:15:41.881211Z",
-     "start_time": "2023-01-29T02:15:34.466739Z"
+     "end_time": "2023-01-30T03:36:51.457368Z",
+     "start_time": "2023-01-30T03:36:43.444038Z"
     }
    },
    "outputs": [
@@ -1291,8 +1295,8 @@
    "id": "03a42999",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-29T02:15:41.884847Z",
-     "start_time": "2023-01-29T02:15:41.882672Z"
+     "end_time": "2023-01-30T03:36:51.460370Z",
+     "start_time": "2023-01-30T03:36:51.458538Z"
     }
    },
    "outputs": [],
@@ -1311,8 +1315,8 @@
    "id": "9634a110",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-29T02:15:43.257279Z",
-     "start_time": "2023-01-29T02:15:41.885921Z"
+     "end_time": "2023-01-30T03:36:52.877167Z",
+     "start_time": "2023-01-30T03:36:51.462115Z"
     }
    },
    "outputs": [
@@ -1362,7 +1366,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.16"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
@@ -1392,6 +1396,7 @@
    "targetLang": "fr",
    "useGoogleTranslate": true
   },
+  "notify_time": "5",
   "toc": {
    "base_numbering": 1,
    "nav_menu": {},
