add convert to Linfoot

--- a/screening_MODULE.ipynb
+++ b/screening_MODULE.ipynb
@@ -6,8 +6,8 @@
    "id": "f1cc105c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-30T03:36:17.450362Z",
-     "start_time": "2023-01-30T03:36:16.593105Z"
+     "end_time": "2023-01-30T04:08:45.169246Z",
+     "start_time": "2023-01-30T04:08:44.308837Z"
     }
    },
    "outputs": [],
@@ -55,8 +55,8 @@
    "id": "1741add3",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-30T03:36:17.485256Z",
-     "start_time": "2023-01-30T03:36:17.451790Z"
+     "end_time": "2023-01-30T04:08:45.203739Z",
+     "start_time": "2023-01-30T04:08:45.170507Z"
     }
    },
    "outputs": [],
@@ -284,7 +284,15 @@
     "                             N=N,\n",
     "                             kernel=kernel,\n",
     "                             bw=bw,\n",
-    "                             machine_err=machine_err)"
+    "                             machine_err=machine_err)\n",
+    "\n",
+    "\n",
+    "@_jit(nopython=True, nogil=True, cache=True, parallel=True, fastmath=True)\n",
+    "def MI_to_Linfoot(mi):\n",
+    "    \"\"\"\n",
+    "    Convert calcualted mutual information estimator to Linfoot's measure of association.\n",
+    "    \"\"\"\n",
+    "    return (1. - _np.exp(-2. * mi))**.5"
    ]
   },
   {
@@ -301,8 +309,8 @@
    "id": "8ce8b66d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-30T03:36:17.501391Z",
-     "start_time": "2023-01-30T03:36:17.487662Z"
+     "end_time": "2023-01-30T04:08:45.217966Z",
+     "start_time": "2023-01-30T04:08:45.205569Z"
     }
    },
    "outputs": [],
@@ -571,8 +579,8 @@
    "id": "51fcb92a",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-30T03:36:17.521632Z",
-     "start_time": "2023-01-30T03:36:17.502825Z"
+     "end_time": "2023-01-30T04:08:45.238296Z",
+     "start_time": "2023-01-30T04:08:45.220430Z"
     }
    },
    "outputs": [],
@@ -989,8 +997,8 @@
    "id": "8a032b1b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-30T03:36:32.197848Z",
-     "start_time": "2023-01-30T03:36:17.522882Z"
+     "end_time": "2023-01-30T04:08:59.374573Z",
+     "start_time": "2023-01-30T04:08:45.239180Z"
     }
    },
    "outputs": [
@@ -999,8 +1007,8 @@
      "output_type": "stream",
      "text": [
       "two independant generalized Bern. r.v. realisations has MI estimate of  1e-12\n",
-      "two independant generalized Bern. r.v. realisations has MI estimate of  0.0010023395689790935\n",
-      "two independant generalized Gaussian r.v. realisations has MI estimate of  0.0014784522662662921\n",
+      "two independant generalized Bern. r.v. realisations has MI estimate of  0.00021759516325424054\n",
+      "two independant generalized Gaussian r.v. realisations has MI estimate of  0.0022845568320753414\n",
       "MI estimate between a,a and a,b:  0.11484453582991859 0.0018942218780961517\n"
      ]
     }
@@ -1040,8 +1048,8 @@
    "id": "6b189ee8",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-30T03:36:38.042526Z",
-     "start_time": "2023-01-30T03:36:32.199291Z"
+     "end_time": "2023-01-30T04:09:04.957690Z",
+     "start_time": "2023-01-30T04:08:59.375741Z"
     }
    },
    "outputs": [
@@ -1098,8 +1106,8 @@
    "id": "fb2875be",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-30T03:36:43.427361Z",
-     "start_time": "2023-01-30T03:36:38.043727Z"
+     "end_time": "2023-01-30T04:09:10.286590Z",
+     "start_time": "2023-01-30T04:09:04.958977Z"
     }
    },
    "outputs": [
@@ -1112,7 +1120,9 @@
       "[2. 1. 2. ... 2. 2. 2.]\n",
       "[1.10869602e-01 3.87157672e-02 4.41160271e-02 1.57533119e-04\n",
       " 5.39010276e-04 1.00382788e-04 5.03710443e-04 1.13958648e-03\n",
-      " 1.48190962e-04 4.10339021e-04]\n"
+      " 1.48190962e-04 4.10339021e-04]\n",
+      "Convert to Linfoot's measure of association, it is:  [0.44595486 0.27296449 0.29060558 0.01774871 0.03282438 0.01416847\n",
+      " 0.0317319  0.0477135  0.01721447 0.0286416 ]\n"
      ]
     }
    ],
@@ -1145,7 +1155,9 @@
     "                                         outcome_iid=outcome_iid)\n",
     "\n",
     "assert np.all(MI_binary > 0)\n",
-    "print(MI_binary[:10])"
+    "print(MI_binary[:10])\n",
+    "print(\"Convert to Linfoot's measure of association, it is: \",\n",
+    "      MI_to_Linfoot(MI_binary)[:10])"
    ]
   },
   {
@@ -1154,8 +1166,8 @@
    "id": "0764c527",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-30T03:36:43.432310Z",
-     "start_time": "2023-01-30T03:36:43.429154Z"
+     "end_time": "2023-01-30T04:09:10.290446Z",
+     "start_time": "2023-01-30T04:09:10.287800Z"
     }
    },
    "outputs": [],
@@ -1230,8 +1242,8 @@
    "id": "6fbd58c1",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-30T03:36:43.442727Z",
-     "start_time": "2023-01-30T03:36:43.433571Z"
+     "end_time": "2023-01-30T04:09:10.317047Z",
+     "start_time": "2023-01-30T04:09:10.291294Z"
     }
    },
    "outputs": [],
@@ -1250,8 +1262,8 @@
    "id": "177a3dfc",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-30T03:36:51.457368Z",
-     "start_time": "2023-01-30T03:36:43.444038Z"
+     "end_time": "2023-01-30T04:09:17.344226Z",
+     "start_time": "2023-01-30T04:09:10.318377Z"
     }
    },
    "outputs": [
@@ -1295,8 +1307,8 @@
    "id": "03a42999",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-30T03:36:51.460370Z",
-     "start_time": "2023-01-30T03:36:51.458538Z"
+     "end_time": "2023-01-30T04:09:17.348316Z",
+     "start_time": "2023-01-30T04:09:17.346294Z"
     }
    },
    "outputs": [],
@@ -1315,8 +1327,8 @@
    "id": "9634a110",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-30T03:36:52.877167Z",
-     "start_time": "2023-01-30T03:36:51.462115Z"
+     "end_time": "2023-01-30T04:09:18.621958Z",
+     "start_time": "2023-01-30T04:09:17.349159Z"
     }
    },
    "outputs": [
