adding tqdm progress bar

--- a/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
+++ b/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "39eea284-aeec-427b-b3fc-2a35d72a5825",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-29T21:58:37.232013Z",
-     "start_time": "2023-01-29T21:58:37.225455Z"
+     "end_time": "2023-01-30T04:49:26.128228Z",
+     "start_time": "2023-01-30T04:49:24.764748Z"
     }
    },
    "outputs": [],
@@ -23,7 +23,8 @@
     "from sklearn.linear_model import ElasticNetCV\n",
     "from sklearn.linear_model import RidgeCV\n",
     "from sklearn.metrics import r2_score\n",
-    "import multiprocess as mp"
+    "import multiprocess as mp\n",
+    "from tqdm import tqdm as tqdm"
    ]
   },
   {
@@ -431,6 +432,7 @@
     "from sklearn.linear_model import RidgeCV\n",
     "from sklearn.metrics import r2_score\n",
     "import multiprocess as mp\n",
+    "from tqdm import tqdm\n",
     "\n",
     "csv_file = r\"/home/kyang/projects/def-cgreenwo/abide_data/abide_fs60_vout_fwhm0_lh_SubjectIDFormatted_N1050_nonzero_withSEX.csv\"\n",
     "original_df = pd.read_csv(csv_file, encoding='unicode_escape', engine='c')\n",
@@ -495,7 +497,7 @@
     "                                 outcome_name=outcome_name,\n",
     "                                 num_rep=num_rep)\n",
     "\n",
-    "    return np.array(list(map(_testing_error_rep, num_attr)))\n",
+    "    return np.array(list(map(_testing_error_rep, tqdm(num_attr))))\n",
     "\n",
     "\n",
     "output = testing_error_num_attr(\n",
@@ -569,7 +571,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.16"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
