check that csv or parquet filepath needs to be declared

--- a/screening_MODULE.ipynb
+++ b/screening_MODULE.ipynb
@@ -576,12 +576,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "51fcb92a",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-30T04:57:21.264758Z",
-     "start_time": "2023-01-30T04:57:21.247145Z"
+     "end_time": "2023-01-30T06:51:45.357111Z",
+     "start_time": "2023-01-30T06:51:45.322408Z"
     }
    },
    "outputs": [],
@@ -645,7 +645,7 @@
     "\n",
     "\n",
     "# @_jit(forceobj=True, nogil=True, cache=True, parallel=True, fastmath=True)\n",
-    "def binary_filter_csv(csv_file,\n",
+    "def binary_filter_csv(csv_file=\"_\",\n",
     "                      _usecols=[],\n",
     "                      N=500,\n",
     "                      kernel=\"epa\",\n",
@@ -661,6 +661,7 @@
     "    If _usecols is given, the returned mutual information will match _usecols. \n",
     "    By default, the left first covariate should be the outcome -- use _usecols to adjust if not the case.\n",
     "    \"\"\"\n",
+    "    assert csv_file != \"_\" or parquet_file != \"_\", \"CSV or parquet filepath should be declared\"\n",
     "    # outcome is the first variable by default; if other specifications are needed, put it the first item in _usecols\n",
     "    # read csv\n",
     "    _csv, _usecols = _read_csv(csv_file=csv_file,\n",
@@ -702,7 +703,7 @@
     "\n",
     "\n",
     "# @_jit(forceobj=True, nogil=True, cache=True, parallel=True, fastmath=True)\n",
-    "def continuous_filter_csv(csv_file,\n",
+    "def continuous_filter_csv(csv_file=\"_\",\n",
     "                          _usecols=[],\n",
     "                          a_N=300,\n",
     "                          b_N=300,\n",
@@ -720,6 +721,7 @@
     "    If _usecols is given, the returned mutual information will match _usecols. \n",
     "    By default, the left first covariate should be the outcome -- use _usecols to adjust if not the case.\n",
     "    \"\"\"\n",
+    "    assert csv_file != \"_\" or parquet_file != \"_\", \"CSV or parquet filepath should be declared\"\n",
     "    # read csv\n",
     "    _csv, _usecols = _read_csv(csv_file=csv_file,\n",
     "                               _usecols=_usecols,\n",
@@ -762,7 +764,7 @@
     "\n",
     "\n",
     "# @_jit(forceobj=True, nogil=True, cache=True, parallel=True, fastmath=True)\n",
-    "def binary_filter_csv_parallel(csv_file,\n",
+    "def binary_filter_csv_parallel(csv_file=\"_\",\n",
     "                               _usecols=[],\n",
     "                               N=500,\n",
     "                               kernel=\"epa\",\n",
@@ -781,6 +783,8 @@
     "    By default, the left first covariate should be the outcome -- use _usecols to adjust if not the case.\n",
     "    \"\"\"\n",
     "    # check some basic things\n",
+    "    assert csv_file != \"_\" or parquet_file != \"_\", \"CSV or parquet filepath should be declared\"\n",
+    "\n",
     "    if core_num == \"NOT DECLARED\":\n",
     "        core_num = _mp.cpu_count()\n",
     "    else:\n",
@@ -840,7 +844,7 @@
     "\n",
     "\n",
     "# @_jit(forceobj=True, nogil=True, cache=True, parallel=True, fastmath=True)\n",
-    "def continuous_filter_csv_parallel(csv_file,\n",
+    "def continuous_filter_csv_parallel(csv_file=\"_\",\n",
     "                                   _usecols=[],\n",
     "                                   a_N=300,\n",
     "                                   b_N=300,\n",
@@ -861,6 +865,8 @@
     "    By default, the left first covariate should be the outcome -- use _usecols to adjust if not the case.\n",
     "    \"\"\"\n",
     "    # check some basic things\n",
+    "    assert csv_file != \"_\" or parquet_file != \"_\", \"CSV or parquet filepath should be declared\"\n",
+    "\n",
     "    if core_num == \"NOT DECLARED\":\n",
     "        core_num = _mp.cpu_count()\n",
     "    else:\n",
@@ -924,7 +930,7 @@
     "\n",
     "\n",
     "# @_jit(forceobj=True, nogil=True, cache=True, parallel=True, fastmath=True)\n",
-    "def Pearson_filter_csv_parallel(csv_file,\n",
+    "def Pearson_filter_csv_parallel(csv_file=\"_\",\n",
     "                                _usecols=[],\n",
     "                                core_num=\"NOT DECLARED\",\n",
     "                                multp=1,\n",
@@ -939,6 +945,8 @@
     "    This function accounts for missing data better than the Pearson's correlation matrix function provided by numpy.\n",
     "    \"\"\"\n",
     "    # check some basic things\n",
+    "    assert csv_file != \"_\" or parquet_file != \"_\", \"CSV or parquet filepath should be declared\"\n",
+    "\n",
     "    if core_num == \"NOT DECLARED\":\n",
     "        core_num = _mp.cpu_count()\n",
     "    else:\n",
@@ -1452,7 +1460,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.9.13"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
