--- a/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
+++ b/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "39eea284-aeec-427b-b3fc-2a35d72a5825",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-30T06:24:55.965449Z",
-     "start_time": "2023-01-30T06:24:54.648414Z"
+     "end_time": "2023-02-01T17:13:51.407824Z",
+     "start_time": "2023-02-01T17:13:44.121189Z"
     }
    },
    "outputs": [],
@@ -18,6 +18,7 @@
     "import matplotlib.pyplot as plt\n",
     "from scipy.stats import kendalltau\n",
     "from scipy.stats import rankdata\n",
+    "from scipy.stats import norm\n",
     "import fastHDMI as mi\n",
     "from sklearn.linear_model import LassoCV\n",
     "from sklearn.linear_model import ElasticNetCV\n",
@@ -328,8 +329,8 @@
    "id": "b5cb6b81",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-29T04:11:44.190787Z",
-     "start_time": "2023-01-29T04:11:42.184031Z"
+     "end_time": "2023-02-01T17:09:31.033226Z",
+     "start_time": "2023-02-01T17:09:31.008216Z"
     }
    },
    "outputs": [],
@@ -432,38 +433,67 @@
    "id": "2777df55",
    "metadata": {},
    "source": [
-    "# Comparison of Performance\n"
+    "# Comparison of Performance\n",
+    "## Here is just to show the testing set $r^2$ for Ridge Regression"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "d3063c76",
+   "execution_count": 1,
+   "id": "77de1868",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-29T21:13:33.038312Z",
-     "start_time": "2023-01-29T21:13:32.795808Z"
+     "end_time": "2023-02-01T17:13:40.026017Z",
+     "start_time": "2023-02-01T17:13:39.925656Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'np' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/zc/y092358s2412m31ltptpms_w0000gn/T/ipykernel_8856/3526760209.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mcolumns\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mr\"./ABIDE_predict_age/ABIDE_columns.npy\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mABIDE_age_MI_RidgeCV\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mr\"./ABIDE_predict_age/ABIDE_age_MI_RidgeCV.npy\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m ABIDE_age_Pearson_RidgeCV = np.load(\n\u001b[1;32m      4\u001b[0m     r\"./ABIDE_predict_age/ABIDE_age_Pearson_RidgeCV.npy\")\n\u001b[1;32m      5\u001b[0m num_attr = np.around(np.linspace(\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'np' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "# load data\n",
-    "ABIDE_age_MI_ElasticNetCV = np.load(\n",
-    "    r\"./ABIDE_predict_age/ABIDE_age_MI_ElasticNetCV.npy\")\n",
-    "ABIDE_age_Pearson_ElasticNetCV = np.load(\n",
-    "    r\"./ABIDE_predict_age/ABIDE_age_Pearson_ElasticNetCV.npy\")\n",
-    "ABIDE_age_MI_LassoCV = np.load(r\"./ABIDE_predict_age/ABIDE_age_MI_LassoCV.npy\")\n",
-    "ABIDE_age_Pearson_LassoCV = np.load(\n",
-    "    r\"./ABIDE_predict_age/ABIDE_age_Pearson_LassoCV.npy\")\n",
+    "columns = np.load(r\"./ABIDE_predict_age/ABIDE_columns.npy\")\n",
     "ABIDE_age_MI_RidgeCV = np.load(r\"./ABIDE_predict_age/ABIDE_age_MI_RidgeCV.npy\")\n",
     "ABIDE_age_Pearson_RidgeCV = np.load(\n",
-    "    r\"./ABIDE_predict_age/ABIDE_age_Pearson_RidgeCV.npy\")"
+    "    r\"./ABIDE_predict_age/ABIDE_age_Pearson_RidgeCV.npy\")\n",
+    "num_attr = np.around(np.linspace(\n",
+    "    0,\n",
+    "    len(columns) / 20, 500 + 1)[1:])  # ADJUST this based on actual settings\n",
+    "\n",
+    "MI_RidgeCV_mean = np.mean(ABIDE_age_MI_RidgeCV, 1)\n",
+    "MI_RidgeCV_std = np.std(ABIDE_age_MI_RidgeCV, 1)\n",
+    "Pearson_RidgeCV_mean = np.mean(ABIDE_age_Pearson_RidgeCV, 1)\n",
+    "Pearson_RidgeCV_std = np.std(ABIDE_age_Pearson_RidgeCV, 1)\n",
+    "\n",
+    "plt.plot(num_attr, MI_RidgeCV_mean, label=\"Mutual Information\")\n",
+    "plt.fill_between(num_attr,\n",
+    "                 (MI_RidgeCV_mean + MI_RidgeCV_std * norm.ppf(0.025)),\n",
+    "                 (MI_RidgeCV_mean + MI_RidgeCV_std * norm.ppf(0.975)),\n",
+    "                 color='b',\n",
+    "                 alpha=.1)\n",
+    "plt.plot(num_attr, Pearson_RidgeCV_mean, label=\"Pearson Correlation\")\n",
+    "plt.fill_between(\n",
+    "    num_attr, (Pearson_RidgeCV_mean + MI_RidgeCV_std * norm.ppf(0.025)),\n",
+    "    (Pearson_RidgeCV_mean + Pearson_RidgeCV_std * norm.ppf(0.975)),\n",
+    "    color='b',\n",
+    "    alpha=.1)\n",
+    "plt.legend()\n",
+    "plt.show()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "77de1868",
+   "id": "2699b04e",
    "metadata": {},
    "outputs": [],
    "source": []
