--- a/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
+++ b/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
@@ -418,13 +418,12 @@
     "output = testing_error_num_attr(\n",
     "    num_attr=list(\n",
     "        map(int,\n",
-    "            np.around(np.linspace(0,\n",
-    "                                  len(columns) / 5, 1500 + 1)[1:]).tolist())\n",
+    "            np.around(np.linspace(0, len(columns), 50 + 1)[1:]).tolist())\n",
     "    ),  # so here it will screen the number of covariates roughly 30 apart\n",
     "    training_proportion=.8,  # 80/20 training+validation/testing division\n",
     "    fun=ElasticNetCV,  # here it says to use ElasticNetCV\n",
     "    outcome_name=\"AGE_AT_SCAN\",\n",
-    "    num_rep=100)\n",
+    "    num_rep=30)\n",
     "np.save(r\"./ABIDE_age_MI_ElasticNetCV\", output)"
    ]
   },
@@ -514,7 +513,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.16"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
